@@ -4,7 +4,13 @@ CHANGES
 0.9.4 (unreleased)
 ==================
 
-* ...
+Bug fixes
+---------
+
+* added dummy ``package_dotted_name`` to ``BuiltinModuleInfo``. This
+  allows the grokking of views in test code using Grok's
+  ``grok.testing.grok_component`` without a failure when it sets up the
+  ``static`` attribute.
 
 0.9.3 (2008-01-26)
 ==================
